# birdy

./: README.md  pyproject.toml
birdy/: birdy.py
